# simracing-ai-coach

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  simcoach_app.spec
configs/: config.example.yaml
docs/: architecture.md  index.html  telemetry_context_schema.md
scripts/: create_icon.py
src/simcoach/: __init__.py
src/simcoach/app/: __init__.py  __main__.py  main_window.py  service.py  workers.py
src/simcoach/app/style/: __init__.py  theme.py
src/simcoach/app/widgets/: __init__.py  action_panel.py  log_panel.py  reference_dialogs.py  settings_card.py  status_bar.py
src/simcoach/cli/: __init__.py  main.py
src/simcoach/config/: settings.py
src/simcoach/context_builder/: builder.py
src/simcoach/llm/: __init__.py  adapter.py  prompts.py  provider.py  types.py
src/simcoach/llm/providers/: __init__.py  base.py  openai_compatible.py
src/simcoach/models/: __init__.py  reference.py  telemetry.py
src/simcoach/recorder/: __init__.py  session_recorder.py
src/simcoach/reference/: __init__.py  manager.py
src/simcoach/report/: generator.py
src/simcoach/report/templates/: report.html.j2
src/simcoach/telemetry_bridge/: __init__.py  ac_shared_memory.py  base.py  mock_source.py
src/simcoach/utils/: __init__.py  sampling.py
tests/: test_llm_extractors.py  test_models.py  test_provider_payload.py
tools/: debug_ac_shm.py  generate_icon.py
