[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simcoach"
version = "0.1.0"
description = "AI-powered post-session racing coach for Assetto Corsa"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["simracing", "assetto-corsa", "telemetry", "ai", "coaching"]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
simcoach = "simcoach.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/simcoach"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
